plugins {
    id 'java'
    id 'application'
    id 'org.graalvm.buildtools.native' version '1.1.1'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

java {
    sourceCompatibility = 25
    targetCompatibility = 25
}

group = 'org.kroj'
version = '1.0-SNAPSHOT'

dependencies {
    // Core
    {
        implementation "io.netty:netty-all:4.2.15.Final";
        String[] natives = ['windows-x86_64', 'linux-x86_64', 'linux-aarch_64', 'osx-x86_64', 'osx-aarch_64'];

        String boringSSL = "io.netty:netty-tcnative-boringssl-static:2.0.77.Final";
        implementation("$boringSSL");

        for (String nat : natives) {
            implementation("$boringSSL:$nat");
        }

        implementation "org.msgpack:msgpack-core:0.9.8"
        implementation "org.msgpack:jackson-dataformat-msgpack:0.9.8"
    }

    // UI
    {
        implementation 'io.github.mkpaz:atlantafx-base:2.0.1';

        String javaFXVersion = "21"
        String[] platforms = ['win', 'linux', 'mac']
        String[] javaFXModules = ['graphics', 'controls', 'base', 'fxml']

        for (String platform : platforms) {
            for (String module : javaFXModules) {
                runtimeOnly "org.openjfx:javafx-$module:$javaFXVersion:$platform"
            }
        }
    }
}

application {
    mainClass = 'org.Kroj.Core.Network.Download.Manager'
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base' ]
}

tasks.register("fatJar", Jar) {
    manifest {
        attributes "Main-Class": application.mainClass.get();
    }
    archiveClassifier = "all";
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE;
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    with jar;
}

graalvmNative {
    toolchainDetection = false;
    binaries {
        main {
            // Core
            {
                imageName = "jvdm";
                buildArgs.add("--no-fallback");
                buildArgs.add('--enable-native-access=ALL-UNNAMED');
                buildArgs.add('-H:IncludeResources=.*');
                buildArgs.add('-H:+MLCallCountProfileInference');
                buildArgs.add('-H:+OptimizeVectorAPI');
                buildArgs.add('--enable-url-protocols=http,https')
                buildArgs.add("--gc=serial")
                buildArgs.add('-O3'); // ۲. نگه داشتن بهینه‌سازی سرعت حداکثری و حذف فلگ متناقض -Os برای سرعت دانلود بیشتر
            }

            // BoringSSL Initialization
            {
                buildArgs.add('--initialize-at-run-time=io.netty.handler.ssl.OpenSsl')
                buildArgs.add('--initialize-at-run-time=io.netty.handler.ssl.OpenSslContext')
                buildArgs.add('--initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslContext')
                buildArgs.add('--initialize-at-run-time=io.netty.handler.ssl.OpenSslPrivateKeyMethod')
                buildArgs.add('--initialize-at-run-time=io.netty.util.AbstractReferenceCounted')
                buildArgs.add('--initialize-at-run-time=io.netty.internal.tcnative')
            }

            // JavaFX Initialize
            {
                buildArgs.add('--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED')
                buildArgs.add('--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED')
                buildArgs.add('--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED')
                buildArgs.add('--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED')
                buildArgs.add('--add-opens=javafx.graphics/javafx.scene.text=ALL-UNNAMED')
                buildArgs.add('--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED')

                buildArgs.add('--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED')
                buildArgs.add('--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED')
                buildArgs.add('--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED')
                buildArgs.add('--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED')
            }
        }
    }
    agent {
        defaultMode = "standard";

        metadataCopy {
            trackReflectionMetadata.set(true);
            inputTaskNames.add("run")
            outputDirectories.add("src/main/resources/META-INF/native-image")
            mergeWithExisting = true
        }
    }
}